--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -1,33 +1,40 @@
 name: Genera pagine AMP
 
+# Trigger: ogni ora + esecuzione manuale
 on:
   schedule:
-    - cron: '0 * * * *' # ogni ora
-  workflow_dispatch:    # per eseguirlo manualmente
+    - cron: '0 * * * *'   # ogni ora
+  workflow_dispatch:       # per esecuzione manuale
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout del repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
+      # 3️⃣ Installa dipendenze necessarie
       - name: Install dependencies
         run: npm install rss-parser fs-extra slugify
 
+      # 4️⃣ Esegui script per generare le pagine AMP
       - name: Generate AMP pages
         run: node scripts/generate-amp.js
 
+      # 5️⃣ Commit e push dei file generati
       - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          # Aggiungi tutti i file generati nella cartella amp, index.html e feed.json
           git add amp/*.html index.html feed.json || true
           git commit -m "Aggiornamento automatico AMP $(date +'%Y-%m-%d %H:%M')" || true
           git push
