--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -1,40 +1,74 @@
-name: Genera pagine AMP
+name: Generate AMP articles
 
-# Trigger automatico ogni ora + possibilità di eseguire manualmente
 on:
   schedule:
-    - cron: '0 * * * *'   # ogni ora
-  workflow_dispatch:       # permette l'esecuzione manuale
+    - cron: "0 * * * *"   # ogni ora
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout del repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "18"
 
-      # 3️⃣ Installa dipendenze necessarie
-      - name: Install dependencies
-        run: npm install rss-parser fs-extra slugify
-
-      # 4️⃣ Esegui script per generare le pagine AMP
       - name: Generate AMP pages
-        run: node scripts/generate-amp.js
-
-      # 5️⃣ Commit e push dei file generati
-      - name: Commit and push changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          # Aggiungi tutti i file generati
-          git add amp/*.html index.html feed.json || true
-          git commit -m "Aggiornamento automatico AMP $(date +'%Y-%m-%d %H:%M')" || true
+          mkdir -p amp
+          node <<'EOF'
+          const fs = require('fs');
+          const https = require('https');
+
+          const FEED_URL = 'https://www.brunorachiele.it/feeds/posts/default?alt=rss';
+          const TEMPLATE = fs.readFileSync('article.html', 'utf8');
+
+          https.get(FEED_URL, res => {
+            let data = '';
+            res.on('data', chunk => data += chunk);
+            res.on('end', () => {
+
+              const items = [...data.matchAll(/<item>([\s\S]*?)<\/item>/g)];
+
+              items.forEach(item => {
+                const get = (tag) => {
+                  const m = item[1].match(new RegExp(`<${tag}>([\\s\\S]*?)<\\/${tag}>`));
+                  return m ? m[1].replace(/<!\[CDATA\[|\]\]>/g, '').trim() : '';
+                };
+
+                const title = get('title');
+                const link = get('link');
+                const pubDate = get('pubDate');
+
+                const imgMatch = item[1].match(/<img[^>]+src="([^"]+)"/);
+                const image = imgMatch ? imgMatch[1].replace(/\/s\d+\//, '/s1200/') : '';
+
+                const description = get('description').replace(/<[^>]+>/g, '').substring(0, 160);
+
+                const slug = link.split('/').pop().replace(/\.html$/, '');
+
+                let html = TEMPLATE
+                  .replace(/{{title}}/g, title)
+                  .replace(/{{link}}/g, link)
+                  .replace(/{{pubDate}}/g, pubDate)
+                  .replace(/{{image}}/g, image)
+                  .replace(/{{description}}/g, description);
+
+                fs.writeFileSync(`amp/${slug}.html`, html);
+              });
+            });
+          });
+          EOF
+
+      - name: Commit and push
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add amp
+          git commit -m "Generate AMP articles" || echo "No changes"
           git push
