--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -1,42 +1,28 @@
-name: Genera Feed AMP
-
-# Trigger ogni ora e manualmente
+name: Generate AMP feed
 on:
   schedule:
-    - cron: '0 * * * *'  # ogni ora
-  workflow_dispatch: {}   # permette avvio manuale
+    - cron: "0 * * * *"  # ogni ora
+  push:
+    branches:
+      - main
 
 jobs:
-  build-feed:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      # 1️⃣ Checkout del repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # 2️⃣ Setup Python
-      - name: Setup Python
+      - uses: actions/checkout@v3
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-
-      # 3️⃣ Install dependencies
+          python-version: "3.x"
       - name: Install dependencies
+        run: pip install feedparser
+      - name: Generate feed.json
+        run: python generate_feed.py
+      - name: Commit feed.json
         run: |
-          python -m pip install --upgrade pip
-          pip install feedparser jinja2
-
-      # 4️⃣ Genera feed.json
-      - name: Genera feed.json
-        run: |
-          python generate_feed.py
-
-      # 5️⃣ Commit e push feed.json
-      - name: Commit e push feed.json
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
           git add feed.json
-          git commit -m "Aggiorna feed AMP" || echo "Nessun cambiamento"
+          git commit -m "Aggiorna feed.json"
           git push
