--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -2,7 +2,7 @@ name: Genera AMP
 
 on:
   schedule:
-    - cron: '0 * * * *'   # ogni ora
+    - cron: '0 * * * *'  # ogni ora
   push:
     branches:
       - main
@@ -22,15 +22,16 @@ jobs:
     - name: Installa dipendenze
       run: pip install feedparser
 
-    - name: Genera feed e articoli AMP
-      run: python generate_feed.py
+    - name: Genera pagine AMP
+      run: |
+        python generate_amp.py
 
     - name: Commit & push
       run: |
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
-        git add articles/ feed.json
-        git commit -m "Aggiornati articoli AMP"
+        git add amp/
+        git commit -m "Aggiornate pagine AMP"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
