--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Aggiorna amp/sitemap.xml da zero con titoli e lastmod
+      - name: Aggiorna amp/sitemap.xml da zero con titoli e date di pubblicazione
         run: |
           # Installa pacchetti necessari
           npm install glob xmlbuilder cheerio
@@ -40,30 +40,38 @@ jobs:
           // Trova tutte le pagine AMP nella cartella amp/, ignorando sitemap.xml
           const files = glob.sync('amp/**/*.html', { ignore: ['amp/sitemap.xml'] });
 
+          // Leggi contenuti e data di pubblicazione da ciascun file
+          const pages = files.map(file => {
+            const content = fs.readFileSync(file, 'utf8');
+            const $ = cheerio.load(content);
+
+            // Legge il titolo
+            const title = $('title').text() || 'Articolo AMP';
+
+            // Legge la data di pubblicazione (dal meta tag pubdate)
+            const pubdate = $('meta[name="pubdate"]').attr('content') || '2000-01-01';
+
+            return { file, title, pubdate };
+          });
+
+          // Ordina le pagine per data di pubblicazione (più recenti prima)
+          pages.sort((a, b) => new Date(b.pubdate) - new Date(a.pubdate));
+
+          // Costruisce l'XML della sitemap
           const urlset = builder.create('urlset', { encoding: 'UTF-8' });
           urlset.att('xmlns', 'http://www.sitemaps.org/schemas/sitemap/0.9');
 
-          files.forEach(file => {
-            const path = file.replace(/\\/g, '/').replace('amp/', '');
-            const content = fs.readFileSync(file, 'utf8');
-
-            // Legge il titolo dall'HTML
-            const $ = cheerio.load(content);
-            const title = $('title').text() || 'Articolo AMP';
-
-            // Legge la data di ultima modifica
-            const stats = fs.statSync(file);
-            const lastmod = stats.mtime.toISOString();
-
+          pages.forEach(page => {
+            const path = page.file.replace(/\\/g, '/').replace('amp/', '');
             urlset.ele('url')
               .ele('loc', {}, `${baseUrl}/${path}`).up()
-              .ele('lastmod', {}, lastmod).up()
-              .ele('title', {}, title);
+              .ele('lastmod', {}, page.pubdate).up()
+              .ele('title', {}, page.title);
           });
 
           const xml = urlset.end({ pretty: true });
           fs.writeFileSync(sitemapPath, xml);
-          console.log('amp/sitemap.xml completamente riscritto con titoli e lastmod!');
+          console.log('amp/sitemap.xml completamente riscritto con titoli e date di pubblicazione!');
           EOF
 
       - name: Commit e push sitemap.xml
@@ -71,7 +79,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add amp/sitemap.xml
-          git commit -m "Aggiornata amp/sitemap.xml con titoli e lastmod" || echo "Nessuna modifica da commit"
+          git commit -m "Sovrascritta amp/sitemap.xml con titoli e date di pubblicazione" || echo "Nessuna modifica da commit"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
