--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -1,36 +1,117 @@
-name: Genera AMP
+name: Genera Pagine AMP + Sitemap
 
 on:
-  schedule:
-    - cron: '0 * * * *'  # ogni ora
-  workflow_dispatch:      # permette l'esecuzione manuale
+  workflow_dispatch: # eseguibile manualmente
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
+  amp-sitemap:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install feedparser
+      - name: Genera pagine AMP
+        run: |
+          npm install fs-extra dayjs glob xmlbuilder cheerio
 
-    - name: Esegui script generate_amp.py
-      run: |
-        python generate_amp.py
+          node <<'EOF'
+          const fs = require('fs-extra');
+          const path = require('path');
+          const dayjs = require('dayjs');
+          const glob = require('glob');
+          const builder = require('xmlbuilder');
+          const cheerio = require('cheerio');
 
-    - name: Commit e push modifiche AMP
-      run: |
-        git config --global user.name "github-actions"
-        git config --global user.email "actions@github.com"
-        git add amp/
-        git commit -m "Aggiornamento automatico pagine AMP [ci skip]" || echo "Nessuna modifica da commit"
-        git push
+          const ampDir = 'amp';
+          fs.ensureDirSync(ampDir);
+
+          // --- Esempio dati articoli ---
+          const posts = [
+            {
+              slug: 'ultimi-30-giorni-politici-del-26-dicembre-2025---bruno-rachiele',
+              title: 'Ultimi 30 giorni Politici del 26 dicembre 2025 - Bruno Rachiele',
+              date: '2025-12-26',
+              content: '<p>Contenuto dell\'articolo qui...</p>'
+            },
+            {
+              slug: 'sondaggio-politico-27-dicembre-2025-supermedia-bruno-rachiele',
+              title: 'Sondaggio Politico 27 dicembre 2025 – Supermedia Bruno Rachiele',
+              date: '2025-12-27',
+              content: '<p>Contenuto dell\'articolo qui...</p>'
+            }
+          ];
+
+          // --- Genera file AMP ---
+          posts.forEach(post => {
+            const html = `
+<!doctype html>
+<html amp lang="it">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <title>${post.title}</title>
+  <link rel="canonical" href="https://amp.brunorachiele.it/${post.slug}.html">
+  <meta name="pubdate" content="${post.date}">
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+</head>
+<body>
+  <h1>${post.title}</h1>
+  <time datetime="${post.date}">${dayjs(post.date).format('D MMMM YYYY')}</time>
+  ${post.content}
+</body>
+</html>
+            `.trim();
+
+            const filePath = path.join(ampDir, `${post.slug}.html`);
+            fs.writeFileSync(filePath, html, 'utf8');
+            console.log(`Generata pagina AMP: ${filePath}`);
+          });
+
+          // --- Genera sitemap ---
+          const files = glob.sync('amp/**/*.html', { ignore: ['amp/sitemap.xml'] });
+
+          const pages = files.map(file => {
+            const content = fs.readFileSync(file, 'utf8');
+            const $ = cheerio.load(content);
+            const title = $('title').text() || 'Articolo AMP';
+            const pubdate = $('meta[name="pubdate"]').attr('content') || '2000-01-01';
+            return { file, title, pubdate };
+          });
+
+          // Ordina per data pubblicazione decrescente
+          pages.sort((a,b) => new Date(b.pubdate) - new Date(a.pubdate));
+
+          const urlset = builder.create('urlset', { encoding: 'UTF-8' });
+          urlset.att('xmlns', 'http://www.sitemaps.org/schemas/sitemap/0.9');
+
+          pages.forEach(page => {
+            const pathUrl = page.file.replace(/\\/g, '/').replace('amp/', '');
+            urlset.ele('url')
+              .ele('loc', {}, `https://amp.brunorachiele.it/${pathUrl}`).up()
+              .ele('lastmod', {}, page.pubdate).up()
+              .ele('title', {}, page.title);
+          });
+
+          const xml = urlset.end({ pretty: true });
+          fs.writeFileSync(path.join(ampDir, 'sitemap.xml'), xml);
+          console.log('amp/sitemap.xml generata correttamente!');
+          EOF
+
+      - name: Commit e push pagine AMP e sitemap
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add amp/
+          git commit -m "Generati nuovi articoli AMP e aggiornata sitemap" || echo "Nessuna modifica da commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
