--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -1,7 +1,7 @@
 name: Genera Pagine AMP + Sitemap
 
 on:
-  workflow_dispatch: # eseguibile manualmente
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -19,40 +19,39 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Genera pagine AMP
+      - name: Genera pagine AMP e sitemap
         run: |
           npm install fs-extra dayjs glob xmlbuilder cheerio
 
           node <<'EOF'
-          const fs = require('fs-extra');
-          const path = require('path');
-          const dayjs = require('dayjs');
-          const glob = require('glob');
-          const builder = require('xmlbuilder');
-          const cheerio = require('cheerio');
+const fs = require('fs-extra');
+const path = require('path');
+const dayjs = require('dayjs');
+const glob = require('glob');
+const builder = require('xmlbuilder');
+const cheerio = require('cheerio');
 
-          const ampDir = 'amp';
-          fs.ensureDirSync(ampDir);
+const ampDir = 'amp';
+fs.ensureDirSync(ampDir);
 
-          // --- Esempio dati articoli ---
-          const posts = [
-            {
-              slug: 'ultimi-30-giorni-politici-del-26-dicembre-2025---bruno-rachiele',
-              title: 'Ultimi 30 giorni Politici del 26 dicembre 2025 - Bruno Rachiele',
-              date: '2025-12-26',
-              content: '<p>Contenuto dell\'articolo qui...</p>'
-            },
-            {
-              slug: 'sondaggio-politico-27-dicembre-2025-supermedia-bruno-rachiele',
-              title: 'Sondaggio Politico 27 dicembre 2025 – Supermedia Bruno Rachiele',
-              date: '2025-12-27',
-              content: '<p>Contenuto dell\'articolo qui...</p>'
-            }
-          ];
+const posts = [
+  {
+    slug: 'ultimi-30-giorni-politici-del-26-dicembre-2025---bruno-rachiele',
+    title: 'Ultimi 30 giorni Politici del 26 dicembre 2025 - Bruno Rachiele',
+    date: '2025-12-26',
+    content: '<p>Contenuto dell\'articolo qui...</p>'
+  },
+  {
+    slug: 'sondaggio-politico-27-dicembre-2025-supermedia-bruno-rachiele',
+    title: 'Sondaggio Politico 27 dicembre 2025 – Supermedia Bruno Rachiele',
+    date: '2025-12-27',
+    content: '<p>Contenuto dell\'articolo qui...</p>'
+  }
+];
 
-          // --- Genera file AMP ---
-          posts.forEach(post => {
-            const html = `
+// --- Genera file AMP ---
+posts.forEach(post => {
+  const html = `
 <!doctype html>
 <html amp lang="it">
 <head>
@@ -69,42 +68,42 @@ jobs:
   ${post.content}
 </body>
 </html>
-            `.trim();
+  `.trim();
 
-            const filePath = path.join(ampDir, `${post.slug}.html`);
-            fs.writeFileSync(filePath, html, 'utf8');
-            console.log(`Generata pagina AMP: ${filePath}`);
-          });
+  const filePath = path.join(ampDir, `${post.slug}.html`);
+  fs.writeFileSync(filePath, html, 'utf8');
+  console.log(`Generata pagina AMP: ${filePath}`);
+});
 
-          // --- Genera sitemap ---
-          const files = glob.sync('amp/**/*.html', { ignore: ['amp/sitemap.xml'] });
+// --- Genera sitemap ---
+const files = glob.sync('amp/**/*.html', { ignore: ['amp/sitemap.xml'] });
 
-          const pages = files.map(file => {
-            const content = fs.readFileSync(file, 'utf8');
-            const $ = cheerio.load(content);
-            const title = $('title').text() || 'Articolo AMP';
-            const pubdate = $('meta[name="pubdate"]').attr('content') || '2000-01-01';
-            return { file, title, pubdate };
-          });
+const pages = files.map(file => {
+  const content = fs.readFileSync(file, 'utf8');
+  const $ = cheerio.load(content);
+  const title = $('title').text() || 'Articolo AMP';
+  const pubdate = $('meta[name="pubdate"]').attr('content') || '2000-01-01';
+  return { file, title, pubdate };
+});
 
-          // Ordina per data pubblicazione decrescente
-          pages.sort((a,b) => new Date(b.pubdate) - new Date(a.pubdate));
+// Ordina per data pubblicazione decrescente
+pages.sort((a,b) => new Date(b.pubdate) - new Date(a.pubdate));
 
-          const urlset = builder.create('urlset', { encoding: 'UTF-8' });
-          urlset.att('xmlns', 'http://www.sitemaps.org/schemas/sitemap/0.9');
+const urlset = builder.create('urlset', { encoding: 'UTF-8' });
+urlset.att('xmlns', 'http://www.sitemaps.org/schemas/sitemap/0.9');
 
-          pages.forEach(page => {
-            const pathUrl = page.file.replace(/\\/g, '/').replace('amp/', '');
-            urlset.ele('url')
-              .ele('loc', {}, `https://amp.brunorachiele.it/${pathUrl}`).up()
-              .ele('lastmod', {}, page.pubdate).up()
-              .ele('title', {}, page.title);
-          });
+pages.forEach(page => {
+  const pathUrl = page.file.replace(/\\/g, '/').replace('amp/', '');
+  urlset.ele('url')
+    .ele('loc', {}, `https://amp.brunorachiele.it/${pathUrl}`).up()
+    .ele('lastmod', {}, page.pubdate).up()
+    .ele('title', {}, page.title);
+});
 
-          const xml = urlset.end({ pretty: true });
-          fs.writeFileSync(path.join(ampDir, 'sitemap.xml'), xml);
-          console.log('amp/sitemap.xml generata correttamente!');
-          EOF
+const xml = urlset.end({ pretty: true });
+fs.writeFileSync(path.join(ampDir, 'sitemap.xml'), xml);
+console.log('amp/sitemap.xml generata correttamente!');
+EOF
 
       - name: Commit e push pagine AMP e sitemap
         run: |
