--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -1,3 +1,4 @@
+cat > .github/workflows/generate-amp.yml << 'EOF'
 name: Genera Pagine AMP + Sitemap
 
 on:
@@ -34,3 +35,4 @@ jobs:
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+EOF
