--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -1,4 +1,3 @@
-cat > .github/workflows/generate-amp.yml << 'EOF'
 name: Genera Pagine AMP + Sitemap
 
 on:
@@ -24,7 +23,8 @@ jobs:
         run: npm install fs-extra dayjs glob xmlbuilder cheerio
 
       - name: Genera pagine AMP e sitemap
-        run: node scripts/genera-amp.js
+        run: |
+          node scripts/genera-amp.js
 
       - name: Commit e push pagine AMP e sitemap
         run: |
@@ -35,4 +35,3 @@ jobs:
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-EOF
