--- a/.github/workflows/generate-amp.yml
+++ b/.github/workflows/generate-amp.yml
@@ -2,6 +2,8 @@ name: Genera Pagine AMP + Sitemap
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 * * * *'   # ogni ora, puoi cambiarlo
   push:
     branches:
       - main
@@ -20,7 +22,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install fs-extra dayjs glob xmlbuilder cheerio
+        run: npm install fs-extra dayjs xml2js node-fetch xmlbuilder cheerio
 
       - name: Genera pagine AMP e sitemap
         run: node scripts/genera-amp.js
@@ -30,7 +32,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add amp/
-          git commit -m "Generati nuovi articoli AMP e aggiornata sitemap" || echo "Nessuna modifica da commit"
+          git commit -m "Aggiornamento automatico pagine AMP e sitemap" || echo "Nessuna modifica da commit"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
